# magiczna-palka

./: CMakeLists.txt  groups  project.config
mgr/cad/: nadajnik_H.dxf  nadajnik_H2.dxf  trojkat.dxf
mgr/konspekt/: konspekt.txt
mgr/praca/: abstract.tex  biblio.tex  kalibracja.tex  main.tex  mgr.kilepr  mgr_strony.txt  mp3d.tex  nadajnik.tex  odbiornik.tex  podsumowanie.tex  teoria.tex  wprowadzenie.tex  zalaczniki.tex
pos-receiver/: CMakeLists.txt  adc.c  com_dev.c  usbd_main.c
pos-receiver-sch/mainboard/: eagle.epf  mainboard.brd  mainboard.pro  mainboard.sch
pos-receiver-sch/receiver/: eagle.epf  odbiornik.brd  odbiornik.pro  odbiornik.sch  odbiornik2.brd  odbiornik2.sch  receiver.brd  receiver.pro  receiver.sch
pos-transmitter/old/BlinkWithDelaypawel/: BlinkWithDelaypawel.ino
pos-transmitter/old/BlinkWithDelaypawel_40kh/: BlinkWithDelaypawel_40kh.ino
pos-transmitter/old/BlinkWithDelaypawel_40kh_2/: BlinkWithDelaypawel_40kh_2.ino
pos-transmitter/old/balwan/: BlinkWithDelaypawel_40kh_2.ino
pos-transmitter/old/balwan1x2/BlinkWithDelaypawel_40kh_2/: BlinkWithDelaypawel_40kh_2.ino
pos-transmitter/old/balwan2x3/BlinkWithDelaypawel_40kh_2/: BlinkWithDelaypawel_40kh_2.ino
pos-transmitter/old/freq_scan/: BlinkWithDelaypawel_40kh_2.ino
tools/oddane/: save-pattern.py  scan.py
tools/oddane/mp3d/: com.py  find_pattern.py  info.py  ply.py  signal.py  xyz.py
tools/oddane/nadajnik/: nadajnik.ino
tools/oddane/odbiornik/: CMakeLists.txt  adc.c  prog.sh.orig
tools/oscilloscope/01-simple/: oscy.py
tools/scanner3d/00-test-get-data/: test_fft.py  test_get_12x_data.py  test_get_1x_data.py  test_get_3x_data.py  test_get_9x_data.py  test_get_data.py  test_input_signal.py
tools/scanner3d/01-test-first-max/: test_first_max.py
tools/scanner3d/02-test-get-pos/: test_get_pos.py
tools/scanner3d/03-test-get-pos/: test_get_pos.py
tools/scanner3d/04-test-time-info/: oscy.py
tools/scanner3d/05-save-pattern/: save-pattern.py
tools/scanner3d/10-test-error/: oscy.py
tools/scanner3d/27-error-refresh-power/: get_data.py  get_dolek.py  oscy.py  test_get_dolek.py  test_get_pos.py
tools/scanner3d/28-3d-error-refresh-power/: oscy.py
tools/scanner3d/29-2d-3d-painting/: get_data.py  get_dolek.py  oscy.py
tools/scanner3d/30-2d-3d-paint-mm/: oscy.py
tools/scanner3d/31-3x-2d-3d-paint-mm/: oscy.py
tools/scanner3d/32-4x-3d-cloud-mm/: oscy.py
tools/scanner3d/40-4x-3d-cloud-normal_vector/: scan.py
tools/scanner3d/mp3d/: com.py  find_pattern.py  info.py  ply.py  signal.py  xyz.py
